--- a/src/main/resources/fxml/Parametres.fxml
+++ b/src/main/resources/fxml/Parametres.fxml
@@ -3,8 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -27,27 +28,44 @@
             </ButtonBar>
          </bottom>
          <center>
-            <GridPane hgap="8.0" vgap="8.0" BorderPane.alignment="CENTER">
+            <GridPane fx:id="gpRoot" hgap="8.0" vgap="8.0" BorderPane.alignment="CENTER">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="75.0" />
+                  <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="75.0" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label styleClass="lEmphase" text="Largeur de la fenêtre" GridPane.halignment="RIGHT" />
-                  <Label styleClass="lEmphase" text="Hauteur de la fenêtre" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                  <Label styleClass="lEmphase" text="Paramètre 3" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-                  <Hyperlink text="http://www.flaticon.com/packs/font-awesome" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label styleClass="lEmphase" text="Paramètre 4" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-                  <Label styleClass="lEmphase" text="Paramètre 5" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
-                  <TextField fx:id="tfLargeurDefaut" promptText="Largeur (défaut: 800)" GridPane.columnIndex="1" />
-                  <TextField fx:id="tfHauteurDefaut" promptText="Hauteur (défaut: 400)" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label styleClass="lEmphase" text="Largeur de la fenêtre" wrapText="true" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                  <Label styleClass="lEmphase" text="Hauteur de la fenêtre" wrapText="true" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <Label styleClass="lEmphase" text="Ouvrir le dernier fichier utilisé au démarrage" textAlignment="RIGHT" wrapText="true" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                  <Label styleClass="lEmphase" text="Backup automatique (X actions)" wrapText="true" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                  <Label styleClass="lEmphase" text="Emplacement du dossier où placer les backup" textAlignment="RIGHT" wrapText="true" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                  <Label layoutX="68.0" layoutY="187.0" styleClass="lEmphase" text="Limite de l'historique d'actions" wrapText="true" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+                  <CheckBox fx:id="cbChargerDernierFichier" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                  <Slider fx:id="sBackupAuto" max="20.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Slider fx:id="sLimiteHistorique" max="20.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Label text="Valeur" GridPane.columnIndex="2" />
+                  <Label text="Défaut" GridPane.columnIndex="3" />
+                  <Label fx:id="lDefautLargeurDefaut" styleClass="lItalic" text="1000" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Label fx:id="lDefautHauteurDefaut" styleClass="lItalic" text="500" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <Label fx:id="lDefautChargerDernierFichier" styleClass="lItalic" text="Oui" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                  <Label fx:id="lDefautBackupAuto" styleClass="lItalic" text="5" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <Label fx:id="lDefautDossierBackup" styleClass="lItalic" text="backup" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                  <Label fx:id="lDefautLimiteHistorique" styleClass="lItalic" text="15" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                  <TextField fx:id="tfDossierBackup" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Slider fx:id="sLargeurDefaut" max="2000.0" min="400.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Slider fx:id="sHauteurDefaut" max="2000.0" min="400.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="bChoisirDossier" mnemonicParsing="false" onAction="#setDossierBackup" text="C" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                </children>
                <BorderPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
