--- a/src/main/resources/stylesheets/style.css
+++ b/src/main/resources/stylesheets/style.css
@@ -9,6 +9,18 @@
     src: url(../fonts/Raleway-Bold.ttf);
 }
 
+@font-face {
+    font-family: Raleway;
+    font-weight: italic;
+    src: url(../fonts/Raleway-Italic.ttf);
+}
+
+@font-face {
+    font-family: Raleway;
+    font-weight: medium;
+    src: url(../fonts/Raleway-Medium.ttf);
+}
+
 .root {
     -fx-font-family: Raleway;
     -fx-font-size: 14;
@@ -26,6 +38,10 @@ TableView:focused, ListView:focused {
 
 .lEmphase {
     -fx-font-weight: bold;
+}
+
+.lItalic {
+    -fx-font-style: italic;
 }
 
 .editionPane {
