--- a/src/main/resources/stylesheets/style.css
+++ b/src/main/resources/stylesheets/style.css
@@ -2,19 +2,16 @@
     font-family: Raleway;
     src: url(../fonts/Raleway-Regular.ttf);
 }
-
 @font-face {
     font-family: Raleway;
     font-weight: bold;
     src: url(../fonts/Raleway-Bold.ttf);
 }
-
 @font-face {
     font-family: Raleway;
     font-weight: italic;
     src: url(../fonts/Raleway-Italic.ttf);
 }
-
 @font-face {
     font-family: Raleway;
     font-weight: medium;
@@ -36,10 +33,9 @@ TableView:focused, ListView:focused {
     //-fx-background-radius: 5, 4, 3;
 }
 
-.lEmphase {
+.lBold {
     -fx-font-weight: bold;
 }
-
 .lItalic {
     -fx-font-style: italic;
 }
@@ -47,7 +43,6 @@ TableView:focused, ListView:focused {
 .editionPane {
     -fx-background-color: rgba(0,0,0,0.5);
 }
-
 .editionBox {
     -fx-background-color: rgba(255,255,255,1);
     -fx-border-radius: 10;
@@ -57,52 +52,67 @@ TableView:focused, ListView:focused {
 .listViewCell:hover {
     -fx-cursor: hand;
 }
-
 .listViewCell > .nom {
     -fx-font-weight: bold;
 }
-
 .listViewCell > .domaine {
     -fx-font-style: italic;
     -fx-text-fill: #5f5f5f;
 }
-
-.titre {
-    -fx-font-size: 42;
+.list-cell:selected > .listViewCell > .domaine {
+    -fx-text-fill: white;
+}
+.list-cell:selected, .table-row-cell:selected {
+    -fx-background-color: #7fbcff;
+}
+.list-cell:hover > .listViewCell > .nom {
+    -fx-text-fill: #ffb122;
 }
 
 #detailsIdleVue {
     -fx-background-color: white;
 }
-
 #detailsIdleVue > .titre {
     -fx-font-size: 28;
 }
 
-.boutonMod {
+.bSelectionAction, .bDetailsAction {
     -fx-background-radius: 0;
     -fx-border-radius: 0;
 }
-
-.boutonMod:focused {
+.bSelectionAction:focused, .bDetailsAction:focused {
     -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color;
     -fx-background-insets: 0, 1, 2;
 }
-
-.filtreTF {
-    -fx-background-radius: 0;
-    -fx-border-radius: 0;
-    -fx-cursor: text;
+.bSelectionAction {
+    -fx-border-width: 0 1 0 1;
+}
+.bDetailsAction {
+    -fx-border-width: 1 1 1 0;
 }
 
-.bpEtatA {
-    -fx-background-color: #2fb254;
+.lTitre {
+    -fx-font-size: 42;
+}
+#spSelection, #lvSelection, #tfSelectionFiltre {
+    -fx-background-radius: 0;
+    -fx-background-insets: 0;
+    -fx-border-radius: 0;
+    -fx-border-color: transparent;
+    -fx-box-border: transparent;
+    -fx-text-box-border: transparent;
+}
+
+#tvDetails {
+    -fx-padding: 1 -1 1 1;
 }
 
 .bpEtatA > .label, .bpEtatNA > .label {
     -fx-text-fill: beige;
 }
-
+.bpEtatA {
+    -fx-background-color: #2fb254;
+}
 .bpEtatNA {
     -fx-background-color: #ac2925;
     -fx-cursor: hand;
